--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ body {
   background: rgb(240, 157, 81, 0.5);
   z-index: 2;
   transition: var(--mainTransition);
-  /* visibility: hidden; */
+  visibility: hidden;
 }
 
 .cart {
@@ -182,6 +182,7 @@ body {
   transition: var(--mainTransition);
   padding: 1.5rem;
   background: #eee;
+  transform: translateX(100%);
 }
 .showCart {
   transform: translateX(0);
@@ -206,6 +207,8 @@ body {
   letter-spacing: var(--mainSpacing);
   margin-bottom: 2rem;
 }
+
+/*---------- Cart Item -------------------- */
 .cart-item {
   display: grid;
   align-items: center;
@@ -232,4 +235,14 @@ body {
 .fa-chevron-down {
   color: var(--primaryColor);
   cursor: pointer;
+}
+/*---------- End of Cart Item -------------------- */
+.cart-footer {
+  margin-top: 2rem;
+  letter-spacing: var(--mainSpacing);
+  text-align: center;
+}
+.cart-footer h3 {
+  text-transform: capitalize;
+  margin-bottom: 1rem;
 }
